--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ummeso.com</title>
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js"></script>
   </head>
   <body>
     <div class="logo">
-      <img id="cow-icon" src="./assets/cow.svg" class="icon" />
+      <img id="cow-icon" src="./cow.svg" class="icon" />
     </div>
   </body>
 </html>
